# pre-devwork

./: README.md
chess-openings-ai/: .gitignore  Dockerfile  pyproject.toml
chess-openings-ai/src/: main.py
chess-openings-ai/src/api/: routes.py
chess-openings-ai/src/rag_pipeline/: document_loader.py  retriever.py  text_splitter.py
chess-openings-ai/tests/: test_api.py
house-price-prediction/: README.md  requirements-dev.txt
house-price-prediction/data/: clean_house_data.csv
house-price-prediction/notebooks/: a-exploratory.ipynb  b-outlier-detection.ipynb  c-model.ipynb  d-model.ipynb  e-model.ipynb  f-compatibility-test.ipynb  g-model.ipynb  h-model.ipynb
jumpstart_me/: .gitignore  main.py  pyproject.toml
kaggle-projects/sales-forecasting/: requirements.txt
kaggle-projects/sales-forecasting/notebooks/: working.ipynb
mycrew-1987/: .gitignore
zzsc9020-group11/: README.md
zzsc9020-group11/agendas/: Week2Meeting.md
zzsc9020-group11/data/: humiditysolar1.csv
zzsc9020-group11/data/Additional Datasets/: alburytemp.csv  alburytemp2.csv  bathursttemp.csv  bathursttemp2.csv  chulloratemp1.csv  chulloratemp2.csv  humiditysolar2.csv  tamworthtemp.csv  tamworthtemp2.csv
zzsc9020-group11/gantt_chart/: gantt.R
zzsc9020-group11/report/: TrojkoEDA.ipynb  TrojkoLSTM.ipynb  final copy.ipynb
zzsc9020-group11/src/: 1D_CNN.py  1D_CNN_2.py  CNN_LSTM.py  Jack EDA.py  TrojkoProphet.ipynb  TrojkoTempDataEDA.ipynb  XGBoost.py  ensemble_doron.ipynb  modeling_doron.ipynb
zzsc9020-group11/src/hyperparam_tuning/lstm_tuning/: oracle.json
(+23 files in other folders)
